Fixed colors for dark mode in courses and lessons

--- a/_sass/_banner.scss
+++ b/_sass/_banner.scss
@@ -1,5 +1,6 @@
 .banner {
 	background-color: var(--bg-color);
+	color: var(--fg-color-emphasis);                                                                    
 	min-height: 50vh;
 	display: grid;
 	align-items: center;
