--- a/_sass/_lesson.scss
+++ b/_sass/_lesson.scss
@@ -206,7 +206,8 @@ margin-left: auto;
   align-items: center;
   border-radius: 100%;
   border: 3px solid var(--banana-500);
-  box-shadow: inset 0 0 0 3px #fff;
+  box-shadow: inset 0 0 0 3px var(--bg-color);
+  color: var(--header-fg-color);
   flex-shrink: 0
 }
 
